--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -253,11 +253,11 @@ group "E_Config" struct {
                     value "autoscroll" uchar: 0;
                     value "geom.pos" int: 937;
                     value "geom.pos_x" double: 0.1000000000000000055511151;
-                    value "geom.pos_y" double: 0.1000000000000000055511151;
+                    value "geom.pos_y" double: 0.0990740740740740782888096;
                     value "geom.res" int: 1054;
                     value "geom.size" int: 24;
-                    value "geom.size_h" double: 0.0694444444444444475283973;
-                    value "geom.size_w" double: 0.0697916666666666685170384;
+                    value "geom.size_h" double: 0.0685185185185185202660918;
+                    value "geom.size_w" double: 0.0692708333333333370340767;
                     value "id" string: "ibox.1";
                     value "orient" int: 9;
                     value "resizable" uchar: 0;
@@ -1345,7 +1345,7 @@ group "E_Config" struct {
     value "clientlist_warp_to_iconified_desktop" int: 0;
     value "cnfmdlg_disabled" int: 0;
     value "config_type" uint: 3;
-    value "config_version" int: 1000024;
+    value "config_version" int: 1000025;
     value "cursor_size" int: 32;
     value "default_system_menu" string: "/usr/etc/xdg/menus/enlightenment.menu";
     value "desk_auto_switch" int: 0;
@@ -1656,6 +1656,30 @@ group "E_Config_Bindings" struct {
             value "context" int: 9;
             value "key" string: "Escape";
             value "modifiers" int: 10;
+        }
+        group "E_Config_Binding_Key" struct {
+            value "action" string: "exec";
+            value "any_mod" uchar: 0;
+            value "context" int: 9;
+            value "key" string: "bar";
+            value "modifiers" int: 11;
+            value "params" string: "pa_tweak -m media.role:music vol-set=0.4079";
+        }
+        group "E_Config_Binding_Key" struct {
+            value "action" string: "exec";
+            value "any_mod" uchar: 0;
+            value "context" int: 9;
+            value "key" string: "braceleft";
+            value "modifiers" int: 11;
+            value "params" string: "pa_tweak -m media.role:music vol-set=0.2319";
+        }
+        group "E_Config_Binding_Key" struct {
+            value "action" string: "exec";
+            value "any_mod" uchar: 0;
+            value "context" int: 9;
+            value "key" string: "braceright";
+            value "modifiers" int: 11;
+            value "params" string: "pa_tweak -m media.role:music vol-set=0.3080";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "window_jump_to_or_start";
