systemd.user.riet: +After=notification-daemon

--- a/systemd/user/riet.service
+++ b/systemd/user/riet.service
@@ -1,5 +1,5 @@
 [Unit]
-After=xorg.target background.target
+After=xorg.target background.target notification-thing.service
 Before=conky.service
 PartOf=startx.target
 
