--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -2057,7 +2057,7 @@ group "E_Config_Bindings" struct {
             value "context" int: 9;
             value "key" string: "f";
             value "modifiers" int: 8;
-            value "params" string: "firefox ~/bin/wrappers/firefox";
+            value "params" string: "chromium ~/bin/wrappers/chromium";
         }
         group "E_Config_Binding_Key" struct {
             value "action" string: "window_jump_to_or_start";
@@ -5983,7 +5983,6 @@ group "Elm_Config" struct {
             value "text_class" string: "toolbar_item";
         }
     }
-    value "accel" string: "hw";
     value "accel_override" uchar: 1;
     value "access_mode" uchar: 0;
     value "atspi_mode" uchar: 0;
