--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -6006,7 +6006,7 @@ group "Elm_Config" struct {
     value "cache_flush_poll_interval" int: 512;
     value "clouseau_enable" uchar: 0;
     value "compositing" int: 1;
-    value "config_version" int: 131089;
+    value "config_version" int: 131093;
     value "context_menu_disabled" uchar: 0;
     value "cursor_engine_only" uchar: 0;
     value "desktop_entry" uchar: 1;
@@ -6083,6 +6083,10 @@ group "Elm_Config" struct {
     value "thumbscroll_friction_standard" double: 1000.0000000000000000000000000;
     value "thumbscroll_hold_threshold" int: 0;
     value "thumbscroll_min_friction" double: 0.5000000000000000000000000;
+    value "thumbscroll_momentum_animation_duration_max_limit" double: 0.0000000000000000000000000;
+    value "thumbscroll_momentum_animation_duration_min_limit" double: 0.0000000000000000000000000;
+    value "thumbscroll_momentum_distance_max" int: 0;
+    value "thumbscroll_momentum_friction" double: 0.0000000000000000000000000;
     value "thumbscroll_momentum_threshold" double: 90.5000000000000000000000000;
     value "thumbscroll_sensitivity_friction" double: 0.2500000000000000000000000;
     value "thumbscroll_threshold" int: 4;
@@ -6096,6 +6100,7 @@ group "Elm_Config" struct {
     value "weekend_start" int: 6;
     value "win_auto_focus_animate" uchar: 1;
     value "win_auto_focus_enable" uchar: 1;
+    value "win_no_border" uchar: 0;
     value "year_max" int: 0;
     value "year_min" int: 0;
     value "zoom_friction" double: 0.5000000000000000000000000;
