--- a/systemd/user/redshift.service
+++ b/systemd/user/redshift.service
@@ -4,4 +4,4 @@ PartOf=startx.target
 
 [Service]
 SyslogIdentifier=%p
-ExecStart=/usr/bin/env redshift -m randr -l 56.8:60.6 -t 6500:4000
+ExecStart=env redshift -m randr -l 56.8:60.6 -t 6500:4000
