--- a/systemd/user/yeahconsole.service
+++ b/systemd/user/yeahconsole.service
@@ -5,4 +5,4 @@ PartOf=startx.target
 [Service]
 SyslogIdentifier=%p
 Environment=ZSHRC_AUTOSTART=pa_mixer
-ExecStart=/usr/bin/env yeahconsole
+ExecStart=env yeahconsole
