--- a/systemd/user/notification-thing.service
+++ b/systemd/user/notification-thing.service
@@ -7,4 +7,4 @@ PartOf=startx.target
 SyslogIdentifier=%p
 Restart=always
 RestartSec=10
-ExecStart=/usr/bin/env notification-thing --activity-timeout 0 --conf "${HOME}/.notification.yaml"
+ExecStart=env notification-thing --activity-timeout 0 --conf "${HOME}/.notification.yaml"
