systemd.user.fgbg: add delay for DE startup and screen configuration

--- a/systemd/user/fgbg.service
+++ b/systemd/user/fgbg.service
@@ -9,6 +9,8 @@ SyslogIdentifier=%p
 Type=notify
 ExecReload=kill -HUP $MAINPID
 
+# Delay to give E time to adjust display resolutions
+ExecStartPre=sleep 3
 ExecStart=env fgbg -di 4:23:47 \
 	--desktop-same --process \
 	/mnt/volatiles/images ${HOME}/media/bgz
