e.themes.terminology: replace theme with a placeholder and a colorscheme ini file

--- a/e/themes/terminology/Makefile
+++ b/e/themes/terminology/Makefile
@@ -3,5 +3,5 @@ EDJE_CMD = edje_cc -id images -fd /usr/share/fonts/misc -sd sounds $(EDJE_OPTS)
 
 all: dark-fir.edj
 
-dark-fir.edj: dark-fir.edc df-*.edc
+dark-fir.edj: dark-fir.edc
 	$(EDJE_CMD) $< $@
