e.themes.terminology.dark-fir: make red shade more distinctive

--- a/e/themes/terminology/dark-fir.ini
+++ b/e/themes/terminology/dark-fir.ini
@@ -1,10 +1,15 @@
+;; Based on Default.ini, but with green-ish main color and black-green bg,
+;;  and some brighter colors (red, blue, etc) to be more distinctive against that background.
+;; New brighter colors are produced using e.g.: gtk-color-calc 'shade(#9696e0, 1.1)'
+;; Faint colors simply have alpha=c8 instead of being blended with full opacity, so can be updated easily here.
+
 [Main]
 version = 1
 
 [Metadata]
 version = 1
 name = Dark Fir
-author = Terminology's developers, mk-fg
+author = Terminology developers, mk-fg
 license = BSD-2-Clause
 
 [Colors]
@@ -23,7 +28,7 @@ tab_title_2 = #000000
 [Normal]
 def = #79fe6c
 black = #404040
-red = #c00000
+red = #d31200
 green = #00c000
 yellow = #c0c000
 blue = #9696e0
@@ -49,10 +54,10 @@ inverse_bg = #eeeeee
 [Faint]
 def = #79fe6cc8
 black = #404040c8
-red = #c00000c8
+red = #d31200c8
 green = #00c000c8
 yellow = #c0c000c8
-blue = #b0b0ebc8
+blue = #9696e0c8
 magenta = #c000c0c8
 cyan = #00c0c0c8
 white = #c0c0c0c8
