e.themes.terminology.dark-fir: make dedicated green colors more saturated

--- a/e/themes/terminology/dark-fir.ini
+++ b/e/themes/terminology/dark-fir.ini
@@ -29,7 +29,7 @@ tab_title_2 = #000000
 def = #79fe6c
 black = #000000
 red = #d31200
-green = #00c000
+green = #1ad91a
 yellow = #c0c000
 blue = #9696e0
 magenta = #c000c0
@@ -42,7 +42,7 @@ inverse_bg = #aaaaaa
 def = #baffb3
 black = #404040
 red = #ff6666
-green = #66ff66
+green = #00ff00
 yellow = #ffff66
 blue = #b0b0eb
 magenta = #ff66ff
@@ -55,7 +55,7 @@ inverse_bg = #eeeeee
 def = #79fe6cc8
 black = #000000c8
 red = #d31200c8
-green = #00c000c8
+green = #1ad91ac8
 yellow = #c0c000c8
 blue = #9696e0c8
 magenta = #c000c0c8
@@ -68,7 +68,7 @@ inverse_bg = #aaaaaac8
 def = #baffb3c8
 black = #404040c8
 red = #ff6666c8
-green = #66ff66c8
+green = #00ff00c8
 yellow = #ffff66c8
 blue = #b0b0ebc8
 magenta = #ff66ffc8
