conky.rc.desktop.disks: +root_ext +cans

--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -104,8 +104,10 @@ ${template0 gray 10}
 \
 $stippled_hr
 ${template1 root / 20}
+${template1 root_ext /srv/root-ext 20}
 ${template1 home /home 20}
 ${template1 dump /mnt/volatiles 10}
+${template1 cans /var/lib/machines 20}
 ${template1 tmp /tmp 30}
 ${color lightgrey}FS_read: ${color #99aaff}${diskio_read}\
   ${color lightgrey}FS_write: ${color #ffaa99}${diskio_write}\
